Fixed statusbar hide

--- a/www/index.html
+++ b/www/index.html
@@ -8,11 +8,14 @@
       <meta name="apple-touch-fullscreen" content="yes">
       <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
       <meta name="mobile-web-app-capable" content="yes">
-      <title>The Defender</title>
+      <title>Valiant Shield</title>
       <link rel="stylesheet" href="css/styles.min.css">
+      <script src="lib/ionic/js/ionic.bundle.js"></script>
+      <script src="cordova.js"></script>  
+      <script src="js/app.js"></script>
    </head>
 
-   <body>
+   <body ng-app="starter">
       <script src="the-defender.min.js"></script>
    </body>
 
